<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Qrtools</string>

    <string name="photo_editor_dialog_color_picker">Color Picker</string>
    <string name="select_color">Select Color</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="instructions">Drag or stretch photos</string>
    <string name="share">Compartilhe</string>
    <string name="Add">Add</string>
    <string name="select_frame_guide">Select the picture you want to use</string>
    <string name="create_frame_guide">Double-tap to view more options</string>
    <string name="select_frame">Selecione o Estilo</string>
    <string name="create_frame">Create frame</string>
    <string name="photocollage">Photo</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="alter_background">Background Photo</string>
    <string name="border_shadow">Border shadow</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo library</string>
    <string name="sticker">Sticker</string>
    <string name="color_border">Color border</string>
    <string name="choose_picture">Choose picture</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="confirm_delete_photo">Are you sure you want to delete this all photos?</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="border_color">Color border</string>
    <string name="edit">Edit</string>
    <string name="border_size">Border size</string>
    <string name="shadow_size">Shadow size</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="guide_add_image">Tap to add photos, stickers or background</string>
    <string name="guide_select_image">Tap to select the image</string>
    <string name="guide_drag_image">Press to drag</string>
    <string name="guide_zoom_in">Use two fingers to zoom in and rotate</string>
    <string name="guide_zoom_out">Use two fingers to zoom out and rotate</string>
    <string name="guide_option">Double tap to select options</string>
    <string name="guide_long_press">Long press and drag drop to swap two images</string>
    <string name="guide_share">Tap to share image</string>
    <string name="create_from_photo">Create freely</string>
    <string name="create_from_frame">Create from frame</string>
    <string name="create_from_template">Create from template</string>
    <string name="waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="album">Album</string>
    <string name="store">Store</string>
    <string name="text">Coloque se u Texto</string>
    <string name="guide_add_text_item">Click on left button to select color. Click right button to select font.</string>
    <string name="create_text_item">Create text item</string>
    <string name="default_font">Estilo de Fonte</string>
    <string name="loading">Loading...</string>
    <string name="background">Background</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_hot_item">Hot items</string>
    <string name="default_backgrounds">Default Backgrounds</string>
    <string name="default_stickers">Default Stickers</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="gallery_albums">Gallery Albums</string>
    <string name="album_image">Album Images</string>
    <string name="please_select_photo">Please select %d photo(s)</string>
    <string name="please_select_photo_without_counting">Please select photo(s)</string>
    <string name="you_need_photo">You only need %d photo(s)</string>
    <string name="warning_uninstall_default_package">You can not remove default packages</string>
    <!--Permission text-->
    <string name="permission_record_audio">RECORD AUDIO</string>
    <string name="permission_access_coarse_location">ACCESS_COARSE_LOCATION</string>
    <string name="permission_access_fine_location">ACCESS_FINE_LOCATION</string>
    <string name="permission_read_contacts">READ_CONTACTS</string>
    <string name="permission_write_contacts">WRITE_CONTACTS</string>
    <string name="permission_write_ex_storage">WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_read_ex_storage">READ_EXTERNAL_STORAGE</string>
    <string name="permission_camera">CAMERA</string>
    <string name="permission_get_account">GET_ACCOUNTS</string>
    <string name="permission_system_alert_window">SYSTEM_ALERT_WINDOW</string>
    <string name="permission_process_outgoing_calls">PROCESS_OUTGOING_CALLS</string>
    <string name="permission_guide">You need to allow Photo Collage Grid Frame app to access the following dangerous permissions to use this app:</string>
    <string name="permission_denied_and_guide_to_setting">Permission denied! Please enable all permission</string>
    <string name="all">All</string>
    <string name="background_color">Background Color</string>
    <string name="select_text_color">Cor do Texto</string>
    <string name="text_font">Estilo da fonte</string>
    <string name="creating">Creating...</string>
    <string name="golden_ratio">Golden Ratio</string>
    <string name="photo_editor_square">Square</string>
    <string name="fit">Fit</string>
    <string name="collage">Collage</string>
    <string name="select_ratio">Select Ratio</string>
    <string name="layout_ration">Layout Ratio</string>
    <string name="help">Help</string>
    <string name="get">Get</string>
    <string name="rate_app">Rate App</string>
    <string name="app_not_found">App not found</string>
    <string name="guide_list_view_settings">Swipe to left on list view to get more actions</string>
    <string name="get_pro">Remove Ads</string>
    <string name="text_images">Selecionado %1$d</string>

    <string name="photo_collage">Colagem</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="pip_collage">PIP Colagem</string>
    <string name="scrap_book">Scrap Book</string>
    <string name="my_creation">My Creation</string>
    <string name="layout">Layout</string>
    <string name="adjust">Ajuste</string>
    <string name="bg_color">Cor Fundo</string>
    <string name="photo_collage_header">Colagem</string>
    <string name="str_sticker">Sticker</string>
    <string name="str_text">Text</string>
    <string name="str_pip_collage">PIP Colagem</string>
    <string name="title_select_frame">Select Frame</string>

    <string name="body_shape">Body Shape</string>
    <string name="make_me_slim">Make Me Slim</string>
    <string name="slim">Slim</string>
    <string name="waist">Cintura</string>
    <string name="hip">Quadril</string>

    <!--admob ids-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>

    <!--fb ad ids-->
    <string name="fbad_banner_id">507756103514204_507756633514151</string>
    <string name="fbad_interstitial_id">507756103514204_507758393513975</string>
    <string name="chest">Peito</string>
    <string name="face">Rosto</string>


</resources>