<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clipChildren="false"
    android:clipToPadding="false" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/ic_topbar" >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/btnSave"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/done" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/body_shape"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/topbar"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_topbar"
        android:gravity="center"
        android:weightSum="5.2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btnSlim"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:tint="#fff"
                android:src="@drawable/slim" />
            <TextView
                android:id="@+id/tabTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slim"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btnFace"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:tint="#fff"
                android:src="@drawable/ic_face" />
            <TextView
                android:id="@+id/tabTxt0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/waist"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_waist" />
            <TextView
                android:id="@+id/tabTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/hip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_hip" />
            <TextView
                android:id="@+id/tabTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hip"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/chest"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_chest" />
            <TextView
                android:id="@+id/tabTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>