<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/ic_topbar">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:tint="@color/header_text_color"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/photo_collage_header"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:tint="@color/header_text_color"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@+id/ratio"
            android:src="@drawable/save" />

        <ImageView
            android:id="@+id/ratio"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:tint="@color/header_text_color"
            android:src="@drawable/h_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editoption"
        android:layout_below="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/spaceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_above="@+id/editoption"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/spaceBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progressBackgroundTint="@color/btn_icon_color" />

        <SeekBar
            android:id="@+id/cornerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:progressBackgroundTint="@color/btn_icon_color" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/templateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editoption"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/templateView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stickerRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_above="@+id/editoption"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bgColorRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        android:layout_above="@+id/editoption"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/editoption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_topbar">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_layout" />

            <TextView
                android:id="@+id/tabTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adjust"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV1"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_adjust" />

            <TextView
                android:id="@+id/tabTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adjust"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sticker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV2"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_sticker" />

            <TextView
                android:id="@+id/tabTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sticker"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bgcolor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV3"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_bgcolor" />

            <TextView
                android:id="@+id/tabTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bg_color"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV4"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_text" />

            <TextView
                android:id="@+id/tabTxt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_text"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>