<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/ic_topbar">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:tint="@color/header_text_color"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Texto"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_15sdp"
            />

        <ImageView
            android:id="@+id/save"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:tint="@color/header_text_color"
            android:src="@drawable/done" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:hint="@string/text"
        android:backgroundTint="#B6B6B6"
        android:textColorHint="#B6B6B6"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_35sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardBackgroundColor="@color/btn_icon_color">
            <TextView
                android:id="@+id/colorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_text_color"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/header_text_color"
                android:textSize="@dimen/_12sdp"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/text_font"
            android:textSize="@dimen/_12sdp"
            android:textColor="#B6B6B6"/>

        <Spinner
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <include layout="@layout/ad_banner_lay"/>
</RelativeLayout>