<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/ic_topbar">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:tint="@color/header_text_color"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="PIP Collage"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:tint="@color/header_text_color"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/save" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editoption"
        android:layout_below="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/templateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editoption"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/templateView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stickerRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_above="@+id/editoption"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/editoption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_topbar"
        android:gravity="center"
        android:weightSum="3">


        <LinearLayout
            android:id="@+id/sticker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_sticker"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tabTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sticker"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pipBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV1"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_pip"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tabTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pip_collage"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tabIV2"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/unpress_text"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tabTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_text"
                android:textColor="#fff"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>